feat: improve ui styles

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
+    <main id="app">
       <canvas class="w-screen h-screen"></canvas>
-    </div>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
